# RAG-theory-to-code

./: .gitignore  README.md  requirements.txt
15/1ea797241a/: metadata.json
21/407a19410e/: metadata.json
30/847a8563e4/: metadata.json
3a/4140b807fe/: metadata.json
3b/7ed149d6e3/: metadata.json
40/8578b31023/: metadata.json
45/dd3b9a0fe8/: metadata.json
46/97e2df8ffd/: metadata.json
47/d6bf3c086a/: metadata.json
48/75a3ed756c/: metadata.json
53/71b9888efc/: metadata.json
57/1c41e3c4f9/: metadata.json
57/ce8fd88084/: metadata.json
59/6da45f1905/: metadata.json
6c/75b4ba93f7/: metadata.json
7a/108a454f47/: metadata.json
7d/42bc034bcc/: metadata.json
88/d22e959d86/: metadata.json
8e/d18f2396c8/: metadata.json
90/7ed93ad4f3/: metadata.json
9f/6164a1e5ac/: metadata.json
a2/375fc14633/: metadata.json
a6/214e03e35c/: metadata.json
bc/b3f1844bc3/: metadata.json
bd/ec851fb01e/: metadata.json
bf/86cbd6f968/: metadata.json
c7/5625212b64/: metadata.json
cc/7d08deb76f/: metadata.json
ce/3822c76477/: metadata.json
ch05/03_langchain_core_and_langgraph/: .env.example  02_runnable_batch.py  02_runnable_batch_async.py  02_runnable_invoke.py  README.md  (+20 more)
ch05/12_deployment/api/: Dockerfile  pyproject.toml
ch05/12_deployment/api/src/: .env.example  entrypoint.sh  main.py  test_env_setup.py
ch05/12_deployment/api/src/models/: query.py
ch05/12_deployment/api/src/rag/: prompts.py  rag_index.py  rag_query.py  tcvectordb_hybrid_search.py  utils.py
ch05/12_deployment/api/src/utils/: async_utils.py
setup/: README.md  test_setup.py
(+357 files in other folders)
